# gungameonline

./: .gitattributes  .gitignore  README.md  plan
client/: project.godot
client copy/: .gitignore  project.godot
client copy 2/assets/maps/: zawarldo.glb
client copy 2/entites/player/: inventory.gd.uid  player.gd
client/maps/: zawarldo.tscn
client/ui/: create_lobby_dialog.gd  lobby_item.tscn  lobby_list.gd  lobby_list.tscn  pause_menu.gd  pause_menu.gd.uid  pause_menu.tscn
docs/: README.md  server-integration-plan.md  server_architecture_rewrite_d7a76db6.plan.md
docs/ai/: api-reference.md  architecture.md  multiplayer-setup.md  networking.md
server/_gungameserver/: Cargo.toml  README.md
server/_gungameserver/src/: main.rs  server.rs
server/_gungameserver/src/domain/: ServerState.rs  lobbies.rs  logic.rs  mod.rs  simulator.rs
server/_gungameserver/src/handlers/: http.rs  lobby.rs  mod.rs  models.rs  state.rs  udp.rs
server/_gungameserver/src/state/: commands.rs  lobby.rs  mod.rs  server_state.rs
server/_gungameserver/src/tick/: delta_sync.rs  lobby_tick.rs  mod.rs
server/_gungameserver/src/utils/: buffers.rs  config.rs  mod.rs  weapondb.rs
server/_gungameserver/src/validation/: mod.rs
server/gungameserver/: Cargo.toml
server/gungameserver copy/: .gitignore  Cargo.toml
server/gungameserver copy/src/: _main.rs  main.rs
server/gungameserver copy/src/handlers/: networking.rs
server/gungameserver copy/src/models/: lobby.rs  server.rs
server/gungameserver copy/tests/: integration_tests.rs
shared/scenes/: World.tscn
(+99 files in other folders)
