[package]
name = "gungameserver"
version = "0.1.0"
edition = "2021"

[dependencies]
renet = "1.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "time", "sync", "macros"] }
bytes = "1.7"
axum = { version = "0.7", features = ["json", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4.29"
fern = "0.6"
chrono = "0.4"
dashmap = "5.5"
smallvec = "1.11"

[dev-dependencies]
tokio-test = "0.4"
